完善以及新增

--- a/分布式微服务面试题.md
+++ b/分布式微服务面试题.md
@@ -1,3 +1,18 @@
+# `CAP、BASE理论`
+**CAP**    
+CAP理论是学术上分布式计算领域的公认定理，CAP理论告诉我们，一个分布式系统（指互相连接并共享数据的节点的集合）中不可能同时满足一致性(C:Consistency)、可用性(A:Availability)、分区容错性(P:Partition tolerance)这个三个需求，最多只能满足2个。 
+
+**BASE**    
+其实实际应用中，存在网络延迟的情况，所以一致性都是最终一致性，而BASE理论就是基于AP,但是没有放弃C，而是采取了牺牲故障时的一致性，达到最终的一致性。
+- 基本可用(BA)
+基本可用是指分布式系统出现不可预知故障的时候，允许损失部分可用性、保证系统可用,比如：
+  - 响应时间上的损失
+  - 功能上的损失 比如:购物网站在购物高峰（如双十一）时，为了保护系统的稳定性，部分消费者可能会被引导到一个降级页面。
+- 弱状态(S)
+也称软状态，和硬状态相比，允许系统中的数据存在中间状态，并认为不会影响系统可用性，及允许系统在不同节点之间的数据副本之间进行数据同步的过程存在延时。
+- 最终一致性(E)
+最终一致性是指系统中所有的数据副本，在经过一段时间的同步后，最终能够达到一个一致的状态，不需要强一致性。最终就是指不管多少时间，总会达到一致性状态。
+
 # `天天说分布式微服务，你明白什么是分布式么?`
 字面意义上，就是一个服务分布在不同的主机上，彼此通过消息通信或者RPC调用。  
 **为什么需要分布式了？**    
