--- a/数据库面试题.md
+++ b/数据库面试题.md
@@ -182,3 +182,9 @@ https://blog.csdn.net/afsvsv/article/details/84998119
 每个步骤都会为下一个步骤生成一个虚拟表，这个虚拟表将作为下一个执行步骤的输入。 
 
 # `where子查询会生产虚拟表么？`
+
+
+# `关于一些简单的SQL笔试题`
+[学生表S，课程表C，学生课程表SC](https://blog.csdn.net/qq_22771739/article/details/88121967)
+
+[MySQL全方位练习（学生表 教师表 课程表 分数表）](https://www.cnblogs.com/mzhaox/p/11280234.html)
