面试题的完善

--- a/数据库面试题.md
+++ b/数据库面试题.md
@@ -185,6 +185,21 @@ https://blog.csdn.net/afsvsv/article/details/84998119
 
 
 # `关于一些简单的SQL笔试题`
+```
+#(2)
+SELECT * FROM S 
+WHERE s_id IN(
+	SELECT s_id FROM SC
+		GROUP BY s_id HAVING COUNT(*)=(SELECT COUNT(*) FROM C)
+);
+#(3)
+select * from S
+where s_id in (
+	select s_id from SC 
+		group by s_id having count(*) >= 2
+);
+```
+
 [学生表S，课程表C，学生课程表SC](https://blog.csdn.net/qq_22771739/article/details/88121967)
 
 [MySQL全方位练习（学生表 教师表 课程表 分数表）](https://www.cnblogs.com/mzhaox/p/11280234.html)
