mysql面试题补充

--- a/业务相关以及一些不好分类的的面试题.md
+++ b/业务相关以及一些不好分类的的面试题.md
@@ -46,3 +46,7 @@ sku属性就是会影响到库存和价格的属性, 又叫销售属性，与商
 分析建议：一般该值处于60%—90%即可，超过90%，磁盘有瓶颈。
 **数据库瓶颈**
 一般是监控sql查询时间。如果sql执行时间普通比较长，比如插入、查询等，那么先分析sql是否有问题，sql没撒问题，同时数据量非常大的话就开始考虑分库分表了。
+
+# `java实现阿拉伯数字转人民币大写（精确到分）?`
+todo
+> [java实现阿拉伯数字转人民币大写（精确到分）](https://blog.csdn.net/u010725501/article/details/52490767)
