--- a/数据库面试题.md
+++ b/数据库面试题.md
@@ -95,9 +95,93 @@ InnoDB存储引擎最小储存单元——页（Page），一个页的大小是1
 
 
 
+# `Binlog日志是什么？`
+
+todo
+
+# mysql 5.7新特性说一下？
+
+- Innodb存储引擎的增强:
+  - 性能提高
+  - 5.7以前不支持索引的重命名，5.7支持
+  - 支持为Innodb建立表空间。
+  - 支持在线修改innodb_buffer_pool`(innodb缓存)大小
+- 服务端的安全性
+  1. 初始化的改变(安全性)：安装完成会为root@localhost用户提供一个默认密码，5.7之前密码是空的。第一次进入mysql命令行，强制修改密码，否则无法进行其他操作。
+  2. 增加了自动过期策略，密码过期之后必须强制修改。同时增加了用户锁定配置。
+- 易用性
+  - 可以explain一个正在运行的sql。
+  - performance_schema提供了更多的监控信息，包括内存使用、MDL锁、存储过程等。
+- 复制功能增强
+  - 多源复制：支持由多个master向一个slave复制。用于将多个服务器备份到单个服务器上。可用于异地容灾和集中备份。
+
+# ` MYSQL 有哪些主从复制方案，你们线上怎么使用的？`
+
+一般常用的主从方案是：单向主从、级联主从、一主多从、多主一从(5.7支持)。
+
+**复制方案**
+
+1. 异步复制
+
+   默认的复制方法，原理简单，就是主库写binlog日志后立即返回客户端，无需等待binlog日志传递给从库的过程。`缺点很明显：主库发送宕机，可能出现丢失数据的情况。`
+
+2. 半同步复制
+
+   主服务器需要安装半同步复制插件，才能开启复制功能。在该功能下：确保从库接收完库传递过来的binlog内容已经写入到relay log里面了，才会通知主库上面的等待线程。当然会有一个等待超时时间，如果超过超时时间，会转为异步复制，`直到至少有一台从库通知主库已经接收到binlog信息为止`。
+
+3. GTID复制
+
+   GTID又叫全局事务iD，是一个已提交事务的编号，并且是全局唯一，Mysql5.6支持。
+
+   GTIP使用master_auto_position=1代替了基于binlog和position号的主从复制搭建方式。
+
+4. todo
+
+
+
+# `说一下搭建主从的大概流程？`
+
+前提：主库的`server-id=1323306`，从库的	`server-id=1333306`不一致。主库开启binlog功能。
+
+1. 在主库上创建一个主从复制的账户。
+2. 初始化数据，同时让从库与主库在某一位置达到同步。建议直接冷备份或者直接导出完整sql。
+3. 把主从的数据导入到从库。从库进行数据恢复
+4. 在从库配置同步参数
+5. 在从库上执行主从命令。`start slave;`ok，主从配置就搞定了。`同时从库一般会开启read only`，防止误操作从库。
+
+查看主从状态：`show slave status\G;`
+
+**如果主库更新数据，从库找不到的而报错**
+
+通过`show slave status\G;`可以查看到具体的错误状态。如果只是少量可以周到是那条漏执行的sql，只需要在从库在执行一次就行了。如果批量的话，建议重新做一次同步。
+
 # # ` MYSQL 的主从延迟怎么解决。`
 todo
-mysql支持半同步复制（必须有一个 从节点写入成功）和并行复制;
+mysql支持半同步复制（必须有一个 从节点写入成功）+并行复制;
+
+**主从复制原理**
+
+主服务器有一个工作线程I/O dump thread，从服务器有两个工作线程，一个是I/O thread，另一个是SQL thread。
+
+1. 主库把外界接受的SQL请求记录到自己的binlog日志中。(也就是主库通过I/O dump thread 给从库 I/O thread传送binlog日志)。
+2. 从库的I/O thread 去请求主库的binlog日志，并将得到的binlog日志写到自己的Relay log(中继日志)文件中。
+3. 从库`重放`中继日志中得到的SQL语句。
+
+<img src="https://s2.ax1x.com/2019/10/22/KG2aKf.png" style="zoom:30%;" />
+
+# Mysql 主从一致性你们是怎样的方案？
+
+一般基于row+GTID的方式不会出现不一致的情况，非常情况比如：主库从库异常断电、磁盘出现写超时情况、进程崩了或被kill掉了。
+
+在5.7+row+GTID+增强半同步基本不会出问题。必要的话可以通过工具来检测不一致的情况
+
+> [MySQL主从数据一致性校验及修复](https://www.jianshu.com/p/27f790f26419)
+
+# Mysql 冷备、热备？
+
+`冷备`是在数据库处于关闭状态下的备份，好处是可以保证数据库的完整性，备份过程速度快一些。`备份`其实就是在mysql关机状态将mysql的数据文件拷贝一份。`恢复`过程也很简单：仅仅需要把已备份的数据目录替换原有的目录就行了。
+
+`热备`主要用两种：一种是直接裸文件备份(依赖第三方工具)，一种是逻辑备份，逻辑备份也就是sql备份，一般的工具有：mysqldump、select。。。into outfile、mydumper。
 
 # #`数据库会死锁吗，举一个死锁的例子， mysql 怎么解决死锁。`
 会，但是mysql会自动检测死锁，如果发生了死锁，mysql会随机选取一个小型事务抛出异常并回滚。
@@ -203,3 +287,4 @@ where s_id in (
 [学生表S，课程表C，学生课程表SC](https://blog.csdn.net/qq_22771739/article/details/88121967)
 
 [MySQL全方位练习（学生表 教师表 课程表 分数表）](https://www.cnblogs.com/mzhaox/p/11280234.html)
+
