--- a/数据库面试题.md
+++ b/数据库面试题.md
@@ -1,3 +1,8 @@
+# # `数据库三范式`
+1. 每一列的原子性
+2. 每一行的原子性，比如多个订单应该对应多个数据。也就是一行数据都完全依赖主键，不能产生歧义。
+3. 建立在第二范式基础上的，非主键字段不能传递依赖于主键字段（不要产生传递依赖）。比如订单表中不存商品数据，应当通过商品id关联。
+
 #  #`索引是什么？ `
 
 是一种帮助mysql高效获取数据的`排好序的数据结构`，同时索引存储在文件中。
@@ -288,3 +293,8 @@ where s_id in (
 
 [MySQL全方位练习（学生表 教师表 课程表 分数表）](https://www.cnblogs.com/mzhaox/p/11280234.html)
 
+# `你们项目怎么做读写分离的？(框架层面)`、
+[SpringBoot 2.x ShardingSphere读写分离实战](https://juejin.im/post/5cf201a75188254c5879f861)
+
+**ShardingSphere**     
+todo
